# trader

./: .gitignore  Cargo.toml  README.md  log_PARSE.txt  log_SOL.txt  log_bfb.txt
src/: arbitrager.rs  main.rs  market_functions.rs
src/bots/: arbitrager.rs  bot.rs  mod.rs
src/bots/arbitrager_strategy/: arbitrager.rs  mod.rs
src/bots/bot_strategy/: bot.rs  market_functions.rs  mod.rs
src/visualizers/: app_menu.rs  bot_side.rs  build_ui.rs  custom_widget.rs  custom_widgets.rs  datas.rs  events.rs  mod.rs  user_side.rs
src/visualizers/bot_mode/: bot_side.rs  data_bot.rs  datas.rs  mod.rs  support_functions.rs
src/visualizers/user_mode/: charts.rs  datas.rs  mod.rs  support_functions.rs  trader_ui.rs  user_side.rs
