[package]
name = "trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unitn_market_2022={version="1.0.10", registry="kellnr"}
parse_market={version="1.0.3", registry="kellnr"}
bfb={version="0.1.1", registry="kellnr"}
market_sol={version="1.0.4", registry="kellnr"}
gag = "1.0.0"
colored = "2.0.0"
