[package]
name = "trader"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Andrea Ballarini","Patrick Cerka","Federico Brancasi","Lorenzo Tinfena"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unitn_market_2022={version="1.0.10", registry="kellnr"}
parse_market={version="1.0.3", registry="kellnr"}
bfb={version="0.1.1", registry="kellnr"}
market_sol={version="1.0.6", registry="kellnr"}
gag = "1.0.0"
colored = "2.0.0"
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"
# default druid implementation (doens't work with im feauture)
#druid = { git = "https://github.com/linebender/druid.git" }
druid = { git = "https://github.com/linebender/druid.git", version = "0.7", features = ["im"] }
# druid implementation with surely working widgets
#druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery.git"}
getrandom = { version = "0.2", features = ["js"] }